--- a/Capstone.ipynb
+++ b/Capstone.ipynb
@@ -17,17 +17,16 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-18T14:04:43.468250Z",
-     "start_time": "2025-11-18T14:04:43.452666Z"
+     "end_time": "2025-11-19T15:58:03.620414Z",
+     "start_time": "2025-11-19T15:58:01.914364Z"
     }
    },
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "\n"
+    "import sklearn"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "metadata": {
